--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CinePulse</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <title>FilmyMERN</title>
   </head>
   <body>
     <div id="root"></div>
